# Neo

./: .gitignore
Linux/x86_64/: CMakeLists.txt  README.md
Linux/x86_64/src/: main.cpp
Linux/x86_64/src/include/: chip_8.cpp  chip_8.hpp  cpu.cpp  cpu.hpp  logger.hpp  renderer.cpp  renderer.hpp  rom.hpp  sanitize.hpp
